
- support primitive vertex sizes > 65535 and redo primitive drawing in the editor-UI 
  (there is now a new setting for each primitive, set to 0 to switch to the old approximate drawing mode (usually fast),
   1 to draw each and every triangle (usually slow) or inbetween to approximate the outlines of the object (lower values are faster))

- export of the entire table to an .obj file (Menu File -> Export -> OBJ Mesh)
- mesh import dialog added. The options are:
  * "Convert coordinate system" : Converts a mesh to the left handed coordinate system used by DirectX
  * "Center mesh to it's midpoint" : The midpoint(pivot) of a mesh is calculated and the whole mesh is moved so that the midpoint is at the origin (0,0,0)
  * "Place at primitive's position" : The old/normal placement function. The mesh isn't moved and will be placed relative to the primitives base position
  * "Place at mesh's absolute position (use mesh's middpoint)": The mesh is transformed so that it's midpoint(pivot) is at the origin (0,0,0) and then moved to it's absolute position
                                                                where it was placed in the 3D editor (e.g. Blender)
  The last option is useful for the following workflow:
   1. export the table as one huge .obj file (File -> Export -> OBJ Mesh)
   2. import this obj file into your 3D editor
   3. place additional meshes on the table or replace existing objects
   4. export each object you have added or replaced into a separate .obj file
   5. import each .obj file and in the import dialog select "Place at mesh's absolute position (use mesh's midpoint)"
      so that the object's pivot point will be the object's midpoint and the base position of the primitive is changed to the position from the 3D editor

  * "Import mesh's material" : Loads the corresponding .mtl file and adds the first material in that file.